--- a/style.css
+++ b/style.css
@@ -1,9 +1,134 @@
-.for_slick_slider {
-    display: flex;
+body {
+    background-image: url('/pics/logo-background.jpg');
+    background-attachment: fixed;
+    background-size: cover;
 }
 
-.items {
-    height: 400px;
-    width: 100px;
-    margin: 20px;
+.game {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    justify-content: center;
+    
+
+}
+
+#title {
+    border: 1px solid black;
+    font-size: 36pt;
+    font-weight: 900;
+    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
+    text-decoration: underline;
+    color: rgb(220, 221, 222);
+
+    
+}
+
+.rules {
+    border: 1px solid black;
+    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
+    font-size: 24pt;
+    color: rgb(220, 221, 222);
+}
+
+.one-time {
+    display: flex;
+    border: 1px solid black;
+    width: 80%;
+    margin: 0px auto;
+    padding-top: 40px;
+    text-align: center;
+    font-weight: 1100;
+    
+}
+
+.slide-controls {
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-around;
+    padding-top: 40px;
+    padding-bottom: 20px;
+}
+
+#guess {
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.hints {
+    border: 1px solid black;
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 24pt;
+    background-image: url('/pics/congrats-pic.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-weight: 900;
+    color: white;
+}
+
+h3 {
+    font-size: 24pt;
+    margin-top: 10px;
+}
+
+.start {
+    transition-duration: 0.4s;
+    border-radius: 12%;
+    width: 200px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 800;
+    font-size: 16pt;
+}
+.start:hover {
+    background-color: rgb(9, 9, 181);
+    color: aliceblue;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+#submit {
+    transition-duration: 0.4s;
+    border-radius: 12%;
+    width: 200px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 800;
+    font-size: 16pt;
+    margin: 10px;
+}
+#submit:hover {
+    background-color: rgb(167, 24, 24);
+    color: aliceblue;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+#text-box {
+    border: 5px solid black;
+    background-color: transparent;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 18pt;
+    color: white;
+    font-weight: 800;
+    text-align: center;
+}
+
+#highlights {
+    display: flex;
+    width: 60%;
+    height: 300px;
+    margin: 0px auto;
+    border: 0;
+    margin-top: 20px;
+}
+
+.swal-button {
+    color: white;
+    background-color: rgb(55, 76, 67);
 }
